@@ -6,6 +6,7 @@ Version 2025.xxxx
 - Changed: mDNS, hostname now lowercase
 - Changed: MQTT-AD, added support for color_temp_command_template
 - Changed: TADO, Added fixed API endpoint
+- Changed: MQTT, not publishing devices that are not used
 - Fixed: mDNS, possible crash when web server (non) SSL was disabled, or a invalid port was specified
 - Fixed: Charts, after deleting a datapoint, the browser was not correctly refreshed
 - Updated: Windows libraries
